finished 1st part

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-electron",
+  "name": "file-manager",
   "version": "0.1.0",
   "private": true,
   "main": "public/electron.js",
